lab3/servicelr3.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicelr3
  labels:
    app: lab3
spec:
  selector:
    app: lab3
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
